--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
         .time {
             margin-bottom: 10px;
         }
+        .score {
+            position: relative;
+        }
         .label span {
             padding: 2px 4px;
             margin-right: 5px;
@@ -53,28 +56,33 @@
             border-radius: 5px;
         }
         .picks-level-0 {
-            -webkit-animation: bounceOut 0.9s 0 ease both;
+            -webkit-animation: bounceOut 1s 0 ease both;
         }
         .picks-level-1 {
             -webkit-animation: bounceOut 0.8s 0 ease both;
         }
         .picks-level-2 {
-            -webkit-animation: bounceOut 0.7s 0 ease both;
-        }
-        .picks-level-3 {
             -webkit-animation: bounceOut 0.6s 0 ease both;
         }
-        .hit {
-            -webkit-animation: hit 0.2s 0s ease both;
+        .picks-level-3 {
+            -webkit-animation: bounceOut 0.4s 0 ease both;
+        }
+        .score .hit {
+            position: absolute;
+            top: 0;
+            right: 0;
+            color: red;
+            font-weight: bold;
+            -webkit-animation: hit 0.6s 0.2s ease both;
         }
         @-webkit-keyframes bounceOut {
             0% {
                 -webkit-transform: scale(1)
             }
-            25% {
+            30% {
                 -webkit-transform: scale(.95)
             }
-            50% {
+            70% {
                 opacity: 1;
                 -webkit-transform: scale(1.1)
             }
@@ -88,15 +96,20 @@
         }
         @-webkit-keyframes hit {
             0% {
-                background-color: white;
+                opacity: 1;
+                top: 0;
+                -webkit-transform: scale(1);
             }
-            50% {
-                background-color: rgb(204, 2, 255);
+            80% {
+                opacity: 0.4;
             }
             100% {
-                background-color: white;
+                opacity: 0;
+                -webkit-transform: scale(1.2);
+                top: -40px; 
             }
         }
+
     </style>
 </head>
 <body>
@@ -118,7 +131,7 @@
                 width: 50,
                 height: 50
             };
-            this.intervalTime = [1000, 900, 800, 700];
+            this.intervalTime = [1000, 800, 600, 400];
             this.evaluation = ['弱爆了！', '一般般呀', '屌炸天！'];
             this.gameover = false;
             this.total = 0;
@@ -157,12 +170,11 @@
                 return $picks;
             },
             _addPicks: function (level) {
-                var $content = this.$content;
                 this.$content.find('.picks').remove();
                 if (this.gameover) {
                     return;
                 }
-                $content.removeClass('hit').append(this._createPicks(level));
+                this.$content.append(this._createPicks(level));
             },
             _changeLevel: function () {
                 var me = this;
@@ -177,10 +189,10 @@
                 me.timer = setInterval(function () {
                     me.$time.text(me.time.toFixed(2));
                     me.time += 0.01;
-                    if ((me.total > 3 && me.level < 1) || (me.total > 7 && me.level < 2) || (me.total > 15 && me.level < 3)) {
+                    if ((me.total > 5 && me.level < 1) || (me.total > 15 && me.level < 2) || (me.total > 20 && me.level < 3)) {
                         me._changeLevel();
                     }
-                    if (me.total > 30) {
+                    if (me.total > 40) {
                         me._gameOver();
                     }
                 }, 10);
@@ -199,11 +211,11 @@
             },
             _events: function () {
                 var me = this;
-                me.$content.on('tap', '.picks:not(.die)', function () {
+                me.$content.on('touchstart', '.picks:not(.die)', function () {
                     var $this = $(this);
                     me.score++;
                     $this.addClass('die');
-                    me.$content.addClass('hit');
+                    me.$score.parent().append('<em class="hit">+1</em>');
                     me.$score.text(me.score);
                 });
             },
@@ -231,7 +243,7 @@
                 score: $score
             });
 
-        $startBtn.on('touchstart', function () {
+        $startBtn.on('click', function () {
             $(this).hide();
             picks.init();
         });
