--- a/index.html
+++ b/index.html
@@ -30,11 +30,10 @@
         .start-btn {
             position: absolute;
             top: 70%;
-            left: 50%;
+            left: 5%;
             height: 50px;
-            width: 200px;
+            width: 90%;
             margin-top: -15px;
-            margin-left: -100px;
             border-radius: 5px;
             text-align: center;
             line-height: 50px;
@@ -65,7 +64,7 @@
             -webkit-animation: bounceOut 0.6s 0 ease both;
         }
         .picks-level-3 {
-            -webkit-animation: bounceOut 0.4s 0 ease both;
+            -webkit-animation: bounceOut 0.5s 0 ease both;
         }
         .score .hit {
             position: absolute;
@@ -109,7 +108,6 @@
                 top: -40px; 
             }
         }
-
     </style>
 </head>
 <body>
@@ -131,7 +129,7 @@
                 width: 50,
                 height: 50
             };
-            this.intervalTime = [1000, 800, 600, 400];
+            this.intervalTime = [1000, 800, 600, 500];
             this.evaluation = ['弱爆了！', '一般般呀', '屌炸天！'];
             this.gameover = false;
             this.total = 0;
@@ -221,6 +219,7 @@
             },
             _reset: function () {
                 this.$content.find('.picks').remove();
+                this.$score.text(0);
                 this.gameover = false;
                 this.total = 0;
                 this.time = 0;
